# nano-theorem

./: .gitignore  LICENSE  Makefile  README.md  demo.py  generate_figures.py  pyproject.toml
theorems/: __init__.py  barron.py  bernstein.py  cover.py  deeponet.py  jl.py  rff.py
