[project]
name = "nano-theorem"
version = "0.1.0"
description = "Six foundational theorems, each proved in ~150 lines of NumPy."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "torch>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["theorems"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
